Fix double scrollbar issue on gallery page

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 html, body {
     max-width: 100%;
     overflow-x: hidden;
+	overflow-y:hidden;
 }
 
 
